--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <title>Google Meet Clone</title>
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css"/>
-    <link rel="stylesheet" href="/home.css">
+    <link rel="stylesheet" href="/index.css">
   </head>
 
   <body class="body-font">
@@ -47,14 +47,7 @@
 
           </div>
 
-          <div class="git">
-            <a href="https://github.com/KodudulaAshish/Gmeet-Clone" class="github-link">
-              <i class="fa-brands fa-github github-icon"></i>
-              <br>
-              <span class="github-text">Visit Us</span>
-            </a>
-          </div>
-
+  
         </div>
 
         <div class="two">
