--- a/public/style.css
+++ b/public/style.css
@@ -210,3 +210,37 @@ video{
     word-wrap:break-word ;
     text-shadow: 0px 0px 1px transparent;
 }
+
+.main_participants_panel {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 18vw;
+  height: 100vh;
+  background-color:#424447;
+  color: white;
+  padding: 10px;
+  overflow-y: auto;
+  z-index: 1000;
+  box-shadow: 2px 0 5px rgba(0,0,0,0.2);
+}
+
+#participants-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+/* Individual participant item */
+#participants-list li {
+  display: flex;
+  align-items: center;
+  margin: 12px 0;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #424447;
+  box-shadow: 0 0 10px rgba(0,0,0,0.4);
+  color:rgb(173, 172, 172);
+  font-size: 1rem;
+}
+
