--- a/public/styles.css
+++ b/public/styles.css
@@ -236,3 +236,39 @@ video{
   margin-top: 0;
   margin-bottom: 10px;
 }
+
+
+.main_participants_panel {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 18vw;
+  height: 100vh;
+  background: radial-gradient(circle at 50.1% 45.8%,  #424447 0%, #1C2331 80.4%);
+  color: white;
+  padding: 10px;
+  overflow-y: auto;
+  z-index: 1000;
+  box-shadow: 2px 0 5px rgba(0,0,0,0.2);
+}
+
+#participants-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+#participants-list li {
+  display: flex;
+  align-items: center;
+  margin: 12px 0;
+  padding: 10px;
+  border-radius: 10px;
+  
+  box-shadow: 0 0 10px rgba(0,0,0,0.4);
+  background-color: #465257;
+  color: rgb(195, 187, 187);
+  font-size: 1rem;
+}
+
+
